--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FlickrClient</string>
     <string name="image">Image</string>
     <string name="no_data">No image found...</string>
+    <string name="trans_list2detail">list2detail</string>
 </resources>
